--- a/contacto/contactanos.html
+++ b/contacto/contactanos.html
@@ -1,38 +1,47 @@
 <!DOCTYPE html>
 <html lang="en">
 
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>FRAGANCIA T</title>
-        <link rel="stylesheet" type="text/css" href="styles.css">
-        <link rel="icon" href="imagenes/logo-mejorado.png">
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Allura&family=Dancing+Script:wght@700&family=Great+Vibes&family=Montserrat:ital,wght@0,900;1,900&display=swap" rel="stylesheet">
-    </head>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>FRAGANCIA T</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://getbootstrap.com/docs/5.3/assets/css/docs.css">
+    <link rel="stylesheet" type="text/css" href="styles.css"> 
+    <link rel="icon" href="../imagenes/logo-mejorado.png">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+</head>
 
 <body>
     <header >
-        <div class="contenedor-prin">
-            <nav>
-                <h1>Fragancia  T</h1>
-                <ul class="menu">
-                    <li><a href="../index.html"><p class="p-nav">Inicio</p></a></li>
-                    <li>
-                        <a><p class="p-nav">Catalogos</p></a>
-                        <ul class="submenu">
-                            <li><a href="../catalogo_hombre.html"><p class="p-nav">Hombres</p></a></li>
-                            <li><a href="../catalogo_mujeres.html"><p class="p-nav">Mujeres</p></a></li>
-                            <li><a href="../catalogo_chamacos.html"><p class="p-nav">Niños</p></a></li>
-                        </ul>
-                    </li>
-                    <li><a href="../sobre-nosotros/sobre_nosotros.html"><p class="p-nav">Sobre Nosotros</p></a></li>
-                    <li><a href="../contacto/contactanos.html"><p class="p-nav">Contactanos</p></a></li>
-                </ul>
-            </nav>
-        </div>
-       
+        <nav class="navbar navbar-expand-lg bg-body-tertiary">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="../index.html">Inicio</a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <ul class="navbar-nav me-auto mb-xl-3 mb-lg-0">
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Catalogos</a>
+                            <ul class="dropdown-menu">
+                                <li><a class="dropdown-item" href="../catalogo_hombre.html">Catalogo de Hombre</a></li>
+                                <li><hr class="dropdown-divider"></li>
+                                <li><a class="dropdown-item" href="../catalogo_mujeres.html">Catalogo de Mujer</a></li>
+                                <li><hr class="dropdown-divider"></li>
+                                <li><a class="dropdown-item" href="../catalogo_chamacos.html">Catalogo de Niño</a></li>
+                            </ul>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="../sobre-nosotros/sobre_nosotros.html">Sobre Nosotros</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="../contacto/contactanos.html">Contactanos</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
     </header>
     <br>
     <div class="contact-container">
@@ -51,23 +60,28 @@
     </div>
     <br>
     <footer>
-        <p>&copy; 2024 FraganciaT. Todos los derechos reservados</p>
-            <div id="parte1">
-            <div id="Footer1">
-            <h3>Acerca de la empresa</h3>
-            <p>Acerca de nosotros</p>
-            <p>Contactenos</p>
-            <p>Terminos y condiciones</p>
-            <p>Politica y privacidad</p>
+        <div class="container d-flex justify-content-between align-items-center footer-container">
+            <a href="#" class="logo-empresa">
+                <img id="logo-footer" src="../imagenes/logo-empresa.ico" alt="logo-empresa">
+            </a>
+            <div class="link-column d-flex flex-column">
+                <h4>Empresa</h4>
+                <a href="../sobre-nosotros/sobre_nosotros.html#historia" class="hover-link">Nuestra Historia</a>
+                <a href="../sobre-nosotros/sobre_nosotros.html#mision" class="hover-link">Misión</a>
             </div>
-            <div id="Footer2">
-            <h3>Mas informacion</h3>
-            <img class="footer-img"  src="img/facebook.png" alt="facebook">
-            <img class="footer-img"  src="img/instagran.png" alt="Instagram">
-            <img class="footer-img"  src="img/x.png" alt="X">
-            <img class="footer-img"  src="img/whatsapp.png" alt="Whatsapp">
+            <div class="link-column d-flex flex-column">
+                <a href="../sobre-nosotros/sobre_nosotros.html#visionn" class="hover-link">Vision</a>
+                <a href="../sobre-nosotros/sobre_nosotros.html#nosotros" class="hover-link">Nosotros</a>
+                <p>&copy; 2024 FraganciaT. Todos los derechos reservados</p>
+
             </div>
+            <div class="d-flex align-items-center">
+                <a href="https://www.facebook.com/?locale=es_LA"><img class="footer-img" src="../footer/facebook.png" alt="facebook"></a>
+                <a href="https://www.instagram.com"><img class="footer-img" src="../footer/instagran.png" alt="Instagram"></a>
+                <a href="https://x.com/?lang=es&mx=2"><img class="footer-img" src="../footer/x.png" alt="X"></a>
+                <a href="https://web.whatsapp.com"><img class="footer-img" src="../footer/whatsapp.png" alt="Whatsapp"></a>
             </div>
+        </div>
     </footer>
 </body>
 
