carta-trans,form

--- a/catalogo_chamacos.html
+++ b/catalogo_chamacos.html
@@ -74,7 +74,7 @@
         <div class="card" style="width: 18rem; margin-right: 8%;">
             <img src="imagenes/img-niños/l1.png" class="card-img-top" alt="archivo no encontrado">
             <div class="card-body">
-                <b>Nombre:</b> Dulce Sueño de Unicornio<br><br><b>Descripcion:</b> Transforma la rutina de la hora de dormir en un cuento de hadas con esta loción mágica. 50ml<br><br><b>Precio:</b> 8.99<br><br>
+                <b>Nombre:</b> Dulce Sueño de Unicornio<br><br><b>Descripcion:</b> Transforma la rutina de la hora de dormir en un cuento de hadas con esta loción mágica. 50ml<br><br><b>Precio:</b> 8.99<br><br><br>
                 <button class="btn btn-dark" onclick="formulario()">Comprar</button>
             </div>
         </div>
