--- a/formulario/formulario_compra.html
+++ b/formulario/formulario_compra.html
@@ -8,23 +8,23 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
 </head>
 <body class="fondo-principal">
-    <div class="container-fluid" >
+    <div class="container-fluid">
         <center>
             <div id="div" class="contenedor_prin">
-                <form action="POST">
+                <form onsubmit="handleSubmit(event)">
                     <div class="row">
                         <h2>Contacto</h2>
                         <div class="col-md-12">
-                            <input class="col-md-12" type="text" placeholder="Correo electronico">
+                            <input class="col-md-12" type="email" placeholder="Correo electrónico" required>
                         </div>
                     </div>
                     <br>
                     <div class="row">
                         <h2>Entrega</h2>
                         <div class="col-md-12">
-                            <select class="col-md-12">
-                                <option value="">Pais/Region</option>
-                                <option value="El salvador">El salvador</option>
+                            <select class="col-md-12" required>
+                                <option value="">País/Región</option>
+                                <option value="El Salvador">El Salvador</option>
                                 <option value="Guatemala">Guatemala</option>
                                 <option value="Honduras">Honduras</option>
                             </select>
@@ -33,67 +33,74 @@
                     <br>
                     <div class="row">
                         <div class="col-md-6">
-                            <input class="col-md-12" type="text" placeholder="Nombre(opcional)" required>
+                            <input class="col-md-12" type="text" placeholder="Nombre (opcional)" required>
                         </div>
                         <div class="col-md-6">
-                            <input class="col-md-12" type="text" placeholder="Apellido">
+                            <input class="col-md-12" type="text" placeholder="Apellido" required>
                         </div>
                     </div>
                     <br>
                     <div class="row">
                         <div class="col-md-9">
-                            <input class="col-md-12" type="text" placeholder="Direccion completa" required>
+                            <input class="col-md-12" type="text" placeholder="Dirección completa" required>
                         </div>
                         <div class="col-md-3">
-                            <input class="col-md-12" type="text" placeholder="Codigo postal" required>
+                            <input class="col-md-12" type="text" placeholder="Código postal" required>
                         </div>
                     </div>
                     <br>
                     <div class="row">
                         <div class="col-md-12">
-                            <input class="col-md-12" type="text" placeholder="Telefono" required>
+                            <input class="col-md-12" type="text" placeholder="Teléfono" required>
                         </div>
                     </div>
                     <br>
                     <div class="row">
                         <h2>Pago</h2>
-                        <p><i>Todas las transacciones son seguras y estan encriptadas</i></p>
+                        <p><i>Todas las transacciones son seguras y están encriptadas</i></p>
                         <div class="col-md-12">
                             <input type="radio" name="tarjeta">
-                            <label for="">Tarjeta de credito</label>
+                            <label for="">Tarjeta de crédito</label>
                             <input type="radio" id="debito" name="tarjeta">
-                            <label for="">Tarjeta de debito</label>
+                            <label for="">Tarjeta de débito</label>
                         </div>
                     </div>
                     <br>
                     <div class="row">
                         <div class="col-md-12">
-                            <input class="col-md-12" type="password" placeholder="Numero de tarjeta">
+                            <input class="col-md-12" type="password" placeholder="Número de tarjeta" required>
                         </div>
                     </div>
                     <br>
                     <div class="row">
                         <div class="col-md-6" style="display: flex; justify-content:right">
                             <label class="col-md-6" for="">Fecha de vencimiento: </label>
-                            <input class="col-md-6" type="date" placeholder="Fecha de vencimiento">
+                            <input class="col-md-6" type="date" placeholder="Fecha de vencimiento" required>
                         </div>
                         <div class="col-md-6">
-                            <input class="col-md-12" type="password" placeholder="Codigo de seguridad">
+                            <input class="col-md-12" type="password" placeholder="Código de seguridad" required>
                         </div>
                     </div>
                     <br>
                     <div class="row">
                         <div class="col-md-12">
-                            <input class="col-md-12" type="password" placeholder="Nombre del titular">
+                            <input class="col-md-12" type="password" placeholder="Nombre del titular" required>
                         </div>
                     </div>
                     <br>
                     <div class="row">
-                        <div class="col-md-12"><button class="btn btn-success col-md-12">Comprar ahora</button></div>
+                        <div class="col-md-12"><button id="submitButton" class="btn btn-success col-md-12">Comprar ahora</button></div>
                     </div>
                 </form>
             </div>
         </center>
     </div>
+    <script>
+        function handleSubmit(event) {
+            event.preventDefault(); // Prevenir el envío del formulario
+            alert('La información fue enviada con éxito.');
+            window.history.back(); // Redirigir a la página anterior
+        }
+    </script>
 </body>
 </html>
