--- a/index.html
+++ b/index.html
@@ -48,14 +48,14 @@
         <h2>CATALOGOS</h2>
         <hr>
     </div>
-    <div class="catalogo">
+    <div class="catalogo h3">
         <div class="card" style="width: 18rem; margin-right: 8%;">
             <a href="catalogo_hombre.html"><h3 class="color-c">Catalogo de Hombres</h3><img src="imagenes/hombre.png" alt="archivo no encontrado"></a>
         </div>
-        <div class="card" style="width: 18rem; margin-right: 8%;">
+        <div class="card h3" style="width: 18rem; margin-right: 8%;">
             <a href="catalogo_mujeres.html"><h3 class="color-c">Catalogo de Mujeres</h3><img src="imagenes/mujer.png" alt="archivo no encontrado"></a>
         </div>
-        <div class="card" style="width: 18rem; margin-right: 8%;">
+        <div class="card h3" style="width: 18rem; margin-right: 8%;">
             <a href="catalogo_chamacos.html"><h3 class="color-c">Catalogo  de  <br>Niños</h3><img src="imagenes/niño.png" alt="archivo no encontrado"></a>
         </div>
     </div>
