--- a/sobre-nosotros/sobre_nosotros.html
+++ b/sobre-nosotros/sobre_nosotros.html
@@ -8,7 +8,6 @@
     <link rel="icon" href="imagenes/logo-mejorado.png">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://getbootstrap.com/docs/5.3/assets/css/docs.css">
-    <link rel="stylesheet" href="css/style.css"> 
     <link rel="icon" href="../imagenes/logo-mejorado.png">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <link rel="stylesheet" type="text/css" href="styles.css">
@@ -94,30 +93,30 @@
     <section class="contenido espacio" style="margin-top: 30px;">
         <center><h2>Nosotros somos:</h2></center>
         <div class="imagenes">
-          <img src="imagenes/Ivan1.jpeg".jpeg" alt="Imagen 1" style="width: 20%;" onclick="showDescription('Ivan')">
-          <img src="imagenes/mau.jpg" alt="Imagen 2" style="width: 20%;" onclick="showDescription('Mauricio')">
-          <img src="imagenes/Alejandro.jpg" alt="Imagen 3" style="width: 20%;" onclick="showDescription('Alejandro')">
+            <img src="imagenes/Ivan1.jpeg" alt="Imagen 1" style="width: 20%;" onclick="showDescription('Ivan')">
+            <img src="imagenes/mau.jpg" alt="Imagen 2" style="width: 20%;" onclick="showDescription('Mauricio')">
+            <img src="imagenes/Alejandro.jpg" alt="Imagen 3" style="width: 20%;" onclick="showDescription('Alejandro')">
         </div>
         <div id="description"></div>
-      </section>      
-      <script>
+    </section>
+    <script>
         function showDescription(name) {
-          var description = "";
-          switch (name) {
-            case "Ivan":
-              description = "Ivan Calderón es un ingeniero de software con más de 5 años de experiencia.";
-              break;
-            case "Mauricio":
-              description = "Josue Benavides un diseñador gráfico con más de 5 años de experiencia.";
-              break;
-            case "Alejandro":
-              description = "Alejandro Hernandez es un programador fullstack.";
-              break;
-          }
-          document.getElementById("description").innerHTML = description;
+            var description = "";
+            switch (name) {
+                case "Ivan":
+                    description = "Ivan Calderón es un ingeniero de software con más de 5 años de experiencia. Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae a unde ipsam deleniti, vero sunt illo ex, distinctio explicabo id doloribus pariatur. Debitis atque a voluptate omnis nostrum error ratione?";
+                    break;
+                case "Mauricio":
+                    description = "Josue Benavides es un diseñador gráfico con más de 5 años de experiencia. Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae a unde ipsam deleniti, vero sunt illo ex, distinctio explicabo id doloribus pariatur. Debitis atque a voluptate omnis nostrum error ratione?";
+                    break;
+                case "Alejandro":
+                    description = "Alejandro Hernandez es un programador fullstack. Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae a unde ipsam deleniti, vero sunt illo ex, distinctio explicabo id doloribus pariatur. Debitis atque a voluptate omnis nostrum error ratione?";
+                    break;
+            }
+            document.getElementById("description").innerHTML = description;
         }
-        </script>
-        
+    </script>
+    </section>
         <footer>
             <div class="container d-flex justify-content-between align-items-center footer-container">
                 <a href="#" class="logo-empresa">
