--- a/formulario/formulario_compra.html
+++ b/formulario/formulario_compra.html
@@ -97,9 +97,9 @@
     </div>
     <script>
         function handleSubmit(event) {
-            event.preventDefault(); // Prevenir el envío del formulario
+            event.preventDefault(); 
             alert('La información fue enviada con éxito.');
-            window.history.back(); // Redirigir a la página anterior
+            window.history.back();
         }
     </script>
 </body>
