--- a/catalogo_chamacos.html
+++ b/catalogo_chamacos.html
@@ -41,11 +41,9 @@
             </div>
         </nav>
     </header>
-    <br>
-    <div class="row" id="division_catalogo">
-        <div class="col-md-12">
-            <h1 class="col-md-12">Bienvenid@ al catalogo de Niños</h1>
-        </div>
+    <br><br>
+    <div style="text-align: center;">
+        <h1>Bienvenid@ al catalogo de Niños</h1>
     </div>
     <div class="contenedor espacio">
         <div class="card" style="width: 18rem; margin-right: 8%;">
@@ -92,12 +90,10 @@
                 <button class="btn btn-dark" style="margin-top: 19%;" onclick="formulario()">Comprar</button>
             </div>
         </div>        
-    </div><br>
-    <div class="row" id="division_catalogo">
-        <div class="col-md-12">
-            <h1 class="col-md-12">Promociones</h1>
-        </div>
-    </div>  
+    </div><br><br>
+    <div style="text-align: center;">
+        <h1>Promociones</h1>
+    </div>
     <div class="contenedor espacio">
         <div class="card" style="width: 18rem; margin-right: 8%;">
             <img src="imagenes/img-niños/l1.png" class="card-img-top" alt="archivo no encontrado">
@@ -128,14 +124,11 @@
             </a>
             <div class="link-column d-flex flex-column">
                 <h4>Empresa</h4>
-                <a href="sobre-nosotros/sobre_nosotros.html#historia" class="hover-link letra">Nuestra Historia</a>
-                <a href="sobre-nosotros/sobre_nosotros.html#mision" class="hover-link letra">Misión</a>
-            </div>
-            <div class="link-column d-flex flex-column">
-                <a href="sobre-nosotros/sobre_nosotros.html#visionn" class="hover-link letra">Vision</a>
-                <a href="sobre-nosotros/sobre_nosotros.html#nosotros" class="hover-link letra">Nosotros</a>
+                <a href="sobre-nosotros/sobre_nosotros.html#historia" class="hover-link">Nuestra Historia</a>
+                <a href="sobre-nosotros/sobre_nosotros.html#mision" class="hover-link">Misión</a>
+                <a href="sobre-nosotros/sobre_nosotros.html#visionn" class="hover-link">Vision</a>
+                <a href="sobre-nosotros/sobre_nosotros.html#nosotros" class="hover-link">Nosotros</a>
                 <p>&copy; 2024 FraganciaT. Todos los derechos reservados</p>
-
             </div>
             <div class="d-flex align-items-center">
                 <a href="https://www.facebook.com/?locale=es_LA"><img class="footer-img" src="footer/facebook.png" alt="facebook"></a>
