--- a/catalogo_mujeres.html
+++ b/catalogo_mujeres.html
@@ -41,10 +41,10 @@
             </div>
         </nav>
     </header>
-    <div class="row" id="division_catalogo">
-        <div class="col-md-12">
-            <h1 class="col-md-12">Bienvenid@ al catalogo de mujeres</h1>
-        </div>
+    <br><br>
+    <div style="text-align: center;">
+        <h1>Bienvenid@ al catalogo de mujeres</h1>
+    </div>
     <div class="contenedor espacio">
         <div class="card" style="width: 18rem; margin-right: 8%;">
             <img src="imagenes/locion mujeres/locion m4.png" class="card-img-top" alt="archivo no encontrado">
@@ -91,10 +91,9 @@
             </div>
         </div>
     </div>
-    <div class="row" id="division_catalogo">
-        <div class="col-md-12">
-            <h1 class="col-md-12">Promociones</h1>
-        </div>
+    <br><br>
+    <div style="text-align: center;">
+        <h1>Promociones</h1>
     </div>
     <div class="contenedor espacio">
         <div class="card" style="width: 18rem; margin-right: 8%;">
@@ -128,12 +127,9 @@
                 <h4>Empresa</h4>
                 <a href="sobre-nosotros/sobre_nosotros.html#historia" class="hover-link">Nuestra Historia</a>
                 <a href="sobre-nosotros/sobre_nosotros.html#mision" class="hover-link">Misión</a>
-            </div>
-            <div class="link-column d-flex flex-column">
                 <a href="sobre-nosotros/sobre_nosotros.html#visionn" class="hover-link">Vision</a>
                 <a href="sobre-nosotros/sobre_nosotros.html#nosotros" class="hover-link">Nosotros</a>
                 <p>&copy; 2024 FraganciaT. Todos los derechos reservados</p>
-
             </div>
             <div class="d-flex align-items-center">
                 <a href="https://www.facebook.com/?locale=es_LA"><img class="footer-img" src="footer/facebook.png" alt="facebook"></a>
