--- a/index.html
+++ b/index.html
@@ -123,15 +123,12 @@
                 <img id="logo-footer" src="imagenes/logo-empresa.ico" alt="logo-empresa">
             </a>
             <div class="link-column d-flex flex-column">
-                <h4 class="color">Empresa</h4>
+                <h4>Empresa</h4>
                 <a href="sobre-nosotros/sobre_nosotros.html#historia" class="hover-link">Nuestra Historia</a>
                 <a href="sobre-nosotros/sobre_nosotros.html#mision" class="hover-link">Misión</a>
-            </div>
-            <div class="link-column d-flex flex-column">
                 <a href="sobre-nosotros/sobre_nosotros.html#visionn" class="hover-link">Vision</a>
                 <a href="sobre-nosotros/sobre_nosotros.html#nosotros" class="hover-link">Nosotros</a>
-                <p class="color">&copy; 2024 FraganciaT. Todos los derechos reservados</p>
-
+                <p>&copy; 2024 FraganciaT. Todos los derechos reservados</p>
             </div>
             <div class="d-flex align-items-center">
                 <a href="https://www.facebook.com/?locale=es_LA"><img class="footer-img" src="footer/facebook.png" alt="facebook"></a>
