--- a/sobre-nosotros/sobre_nosotros.html
+++ b/sobre-nosotros/sobre_nosotros.html
@@ -117,29 +117,27 @@
         }
     </script>
     </section>
-        <footer>
-            <div class="container d-flex justify-content-between align-items-center footer-container">
-                <a href="#" class="logo-empresa">
-                    <img id="logo-footer" src="../imagenes/logo-empresa.ico" alt="logo-empresa">
-                </a>
-                <div class="link-column d-flex flex-column">
-                    <h4>Empresa</h4>
-                    <a href="../sobre-nosotros/sobre_nosotros.html#historia" class="hover-link ">Nuestra Historia</a>
-                    <a href="../sobre-nosotros/sobre_nosotros.html#mision" class="hover-link">Misión</a>
-                </div>
-                <div class="link-column d-flex flex-column"><br>
-                    <a href="../sobre-nosotros/sobre_nosotros.html#visionn" class="hover-link">Vision</a>
-                    <a href="../sobre-nosotros/sobre_nosotros.html#nosotros" class="hover-link">Nosotros</a>
-                    <p>&copy; 2024 FraganciaT. Todos los derechos reservados</p>
-                </div>
-                <div class="d-flex align-items-center">
-                    <a href="https://www.facebook.com/?locale=es_LA"><img class="footer-img" src="../footer/facebook.png" alt="facebook"></a>
-                    <a href="https://www.instagram.com"><img class="footer-img" src="../footer/instagran.png" alt="Instagram"></a>
-                    <a href="https://x.com/?lang=es&mx=2"><img class="footer-img" src="../footer/x.png" alt="X"></a>
-                    <a href="https://web.whatsapp.com"><img class="footer-img" src="../footer/whatsapp.png" alt="Whatsapp"></a>
-                </div>
+    <footer>
+        <div class="container d-flex justify-content-between align-items-center footer-container">
+            <a href="#" class="logo-empresa">
+                <img id="logo-footer" src="../imagenes/logo-empresa.ico" alt="logo-empresa">
+            </a>
+            <div class="link-column d-flex flex-column">
+                <h4>Empresa</h4>
+                <a href="sobre-nosotros/sobre_nosotros.html#historia" class="hover-link">Nuestra Historia</a>
+                <a href="sobre-nosotros/sobre_nosotros.html#mision" class="hover-link">Misión</a>
+                <a href="sobre-nosotros/sobre_nosotros.html#visionn" class="hover-link">Vision</a>
+                <a href="sobre-nosotros/sobre_nosotros.html#nosotros" class="hover-link">Nosotros</a>
+                <p>&copy; 2024 FraganciaT. Todos los derechos reservados</p>
             </div>
-        </footer>
+            <div class="d-flex align-items-center">
+                <a href="https://www.facebook.com/?locale=es_LA"><img class="footer-img" src="../footer/facebook.png" alt="facebook"></a>
+                <a href="https://www.instagram.com"><img class="footer-img" src="../footer/instagran.png" alt="Instagram"></a>
+                <a href="https://x.com/?lang=es&mx=2"><img class="footer-img" src="../footer/x.png" alt="X"></a>
+                <a href="https://web.whatsapp.com"><img class="footer-img" src="../footer/whatsapp.png" alt="Whatsapp"></a>
+            </div>
+        </div>
+    </footer>
 </body>
 
 </html>
