--- a/catalogo_chamacos.html
+++ b/catalogo_chamacos.html
@@ -60,7 +60,7 @@
                 <button class="btn btn-dark" style="margin-top: 9%;" onclick="formulario()">Comprar</button>
             </div>
         </div>
-        <div class="card" style="width: 18rem; margin-right: 8%;">
+        <div class="card" style="width: 18rem;">
             <img src="imagenes/img-niños/l15.png" class="card-img-top" alt="archivo no encontrado">
             <div class="card-body">
                 <b>Nombre:</b> Caricias de Nube Encantada<br><br><b>Descripcion:</b>  Experimenta la suavidad celestial con esta loción ligera como una nube.  50ml<br><br><b>Precio:</b> $9.99<br><br>
@@ -83,7 +83,7 @@
                 <button class="btn btn-dark" style="margin-top: 19%;" onclick="formulario()">Comprar</button>
             </div>
         </div>
-        <div class="card" style="width: 18rem; margin-right: 8%;">
+        <div class="card" style="width: 18rem;">
             <img src="imagenes/img-niños/l8.png" class="card-img-top" alt="archivo no encontrado">
             <div class="card-body">
                 <b>Nombre:</b> Abrazo de Osito Carinoso<br><br><b>Descripcion:</b> Envuelve a tu pequeño en un cálido abrazo con esta loción reconfortante. 50ml<br><br><b>Precio:</b> $7.99<br><br>
@@ -109,7 +109,7 @@
                 <button class="btn btn-dark" onclick="formulario()">Comprar</button>
             </div>
         </div>
-        <div class="card" style="width: 18rem; margin-right: 8%;">
+        <div class="card" style="width: 18rem;">
             <img src="imagenes/img-niños/l8.png" class="card-img-top" alt="archivo no encontrado">
             <div class="card-body ">
                 <b>Nombre:</b> Brillito de Luna y Mariposa<br><br><b>Descripcion:</b> Deja que la piel de tu pequeño brille con esta loción mágica. 50ml<br><br><b>Precio:</b> $8.99<br><br><b>Promocion:</b> 3 X 25.99<br><br>
