--- a/catalogo_hombre.html
+++ b/catalogo_hombre.html
@@ -60,7 +60,7 @@
                 <button class="btn btn-dark" onclick="formulario()">Comprar</button>
             </div>
         </div>
-        <div class="card" style="width: 18rem; margin-right: 8%;">
+        <div class="card" style="width: 18rem;">
             <img src="imagenes/locion hombres/losion8.png" class="card-img-top" alt="archivo no encontrado">
             <div class="card-body">
                 <b>Nombre:</b> Aliento del Océano<br><br><b>Descripcion:</b> Una fragancia refrescante y vigorizante que te sumerge en las profundidades del mar. 100ml<br><br><b>Precio:</b> $14.99<br><br>
@@ -83,7 +83,7 @@
                 <button class="btn btn-dark" style="margin-top: 10%;" onclick="formulario()">Comprar</button>
             </div>
         </div>
-        <div class="card" style="width: 18rem; margin-right: 8%;">
+        <div class="card" style="width: 18rem;">
             <img src="imagenes/locion hombres/losion11.png" class="card-img-top" alt="archivo no encontrado">
             <div class="card-body">
                 <b>Nombre:</b> Serenata Nocturna<br><br><b>Descripcion:</b> Una loción romántica y seductora que te transporta a una noche de ensueño, donde las estrellas brillan en el cielo y la luna ilumina tu camino. 50ml<br><br><b>Precio:</b> $8.99<br><br>
@@ -111,7 +111,7 @@
                 <button class="btn btn-dark" style="margin-top: 38%;" onclick="formulario()">Comprar</button>
             </div>
         </div>
-        <div class="card" style="width: 18rem; margin-right: 8%;">
+        <div class="card" style="width: 18rem;">
             <img src="imagenes/locion hombres/losion4.png" class="card-img-top" alt="archivo no encontrado">
             <div class="card-body">
                 <b>Nombre:</b> Rocío del Amanecer<br><br><b>Descripcion:</b> Con un aroma cítrico y floral, esta loción te hace sentir como un soplo de aire fresco por la mañana, llenándote de vitalidad y optimismo para empezar el día con alegría y determinación. 100ml<br><br><b>Precio:</b> $14.99<br><br><b>Promocion:</b> Locion + Frasco X $24.99<br><br>
