--- a/index.html
+++ b/index.html
@@ -49,13 +49,13 @@
         <hr>
     </div>
     <div class="catalogo h3">
-        <div class="card" style="width: 18rem; margin-right: 8%;">
+        <div class="card" style="width: 18rem; margin-right: 10%;">
             <a href="catalogo_hombre.html"><h3 class="color-c">Catalogo de Hombres</h3><img src="imagenes/hombre.png" alt="archivo no encontrado"></a>
         </div>
-        <div class="card h3" style="width: 18rem; margin-right: 8%;">
+        <div class="card h3" style="width: 18rem; margin-right: 10%;">
             <a href="catalogo_mujeres.html"><h3 class="color-c">Catalogo de Mujeres</h3><img src="imagenes/mujer.png" alt="archivo no encontrado"></a>
         </div>
-        <div class="card h3" style="width: 18rem; margin-right: 8%;">
+        <div class="card h3" style="width: 18rem;">
             <a href="catalogo_chamacos.html"><h3 class="color-c">Catalogo  de  <br>Niños</h3><img src="imagenes/niño.png" alt="archivo no encontrado"></a>
         </div>
     </div>
@@ -109,7 +109,7 @@
                 <button class="btn btn-dark" style="margin-top: 28%;" onclick="formulario()">Comprar</button>
             </div>
         </div>
-        <div class="card" style="width: 18rem; margin-right: 8%;">
+        <div class="card" style="width: 18rem;">
             <img src="imagenes/img-niños/l15.png" class="card-img-top" alt="archivo no encontrado">
             <div class="card-body">
                 <b>Nombre:</b> GIVENCHY<br><br><b>Descripcion:</b> Perfume para el mas lindo del hogar<br><br><b>Precio:</b> $10.50<br>
