--- a/sobre-nosotros/sobre_nosotros.html
+++ b/sobre-nosotros/sobre_nosotros.html
@@ -104,13 +104,13 @@
             var description = "";
             switch (name) {
                 case "Ivan":
-                    description = "Ivan Calderón es un ingeniero de software con más de 5 años de experiencia. Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae a unde ipsam deleniti, vero sunt illo ex, distinctio explicabo id doloribus pariatur. Debitis atque a voluptate omnis nostrum error ratione?";
+                    description = "Ivan Calderón es un ingeniero de software con más de 5 años de experiencia.";
                     break;
                 case "Mauricio":
-                    description = "Josue Benavides es un diseñador gráfico con más de 5 años de experiencia. Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae a unde ipsam deleniti, vero sunt illo ex, distinctio explicabo id doloribus pariatur. Debitis atque a voluptate omnis nostrum error ratione?";
+                    description = "Josue Benavides es un diseñador gráfico con más de 5 años de experiencia.";
                     break;
                 case "Alejandro":
-                    description = "Alejandro Hernandez es un programador fullstack. Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae a unde ipsam deleniti, vero sunt illo ex, distinctio explicabo id doloribus pariatur. Debitis atque a voluptate omnis nostrum error ratione?";
+                    description = "Alejandro Hernandez es un programador fullstack.";
                     break;
             }
             document.getElementById("description").innerHTML = description;
