--- a/catalogo_mujeres.html
+++ b/catalogo_mujeres.html
@@ -60,7 +60,7 @@
                 <button class="btn btn-dark" style="margin-top: 28%;" onclick="formulario()">Comprar</button>
             </div>
         </div>
-        <div class="card" style="width: 18rem; margin-right: 8%;">
+        <div class="card" style="width: 18rem;">
             <img src="imagenes/locion mujeres/locion m5.png" class="card-img-top" alt="archivo no encontrado">
             <div class="card-body">
                 <b>Nombre:</b> Melodía de Lavanda Serena<br><br><b>Descripcion:</b>  Una fragancia relajante y tranquilizadora que captura la esencia calmante de la lavanda. Con notas frescas y herbales, esta loción es perfecta para momentos de relajación y bienestar, envolviendo el cuerpo en una melodía de paz y serenidad. 100ml<br><br><b>Precio:</b> $14.99<br><br>
@@ -83,7 +83,7 @@
                 <button class="btn btn-dark" onclick="formulario()">Comprar</button>
             </div>
         </div>
-        <div class="card" style="width: 18rem; margin-right: 8%;">
+        <div class="card" style="width: 18rem;">
             <img src="imagenes/locion mujeres/locion m9.png" class="card-img-top" alt="archivo no encontrado">
             <div class="card-body">
                 <b>Nombre:</b> Rocío de Mariposas Doradas<br><br><b>Descripcion:</b> Una fragancia exótica y seductora que transporta a lugares lejanos y misteriosos, con notas exuberantes y sensuales que envuelven la piel con un aura de misterio y seducción. 50ml<br><br><b>Precio:</b> $8.99<br><br>
@@ -110,7 +110,7 @@
                 <button class="btn btn-dark" style="margin-top: 10%;" onclick="formulario()">Comprar</button>
             </div>
         </div>
-        <div class="card" style="width: 18rem; margin-right: 8%;">
+        <div class="card" style="width: 18rem;">
             <img src="imagenes/locion mujeres/locion m3.png" class="card-img-top" alt="archivo no encontrado">
             <div class="card-body">
                 <b>Nombre:</b> Aroma de Luna Plateada<br><br><b>Descripcion:</b> Una fragancia mística y enigmática que evoca la magia de la noche bajo la luz plateada de la luna, con notas hipnóticas y fascinantes que invitan a explorar los misterios del universo. 100ml<br><br><b>Precio:</b> $14.99<br><br><b>Promocion:</b> 2 X $24.99<br><br>Disponible solo del 1 al 30 de mayo<br><br>
