--- a/contacto/contactanos.html
+++ b/contacto/contactanos.html
@@ -43,6 +43,15 @@
             </div>
         </nav>
     </header>
+    <div id="contador-visitas">
+        <div id="sfc2w39sg3p44zaaf4maypbr7ceblb7fj5j"></div>
+        <script type="text/javascript" src="https://counter4.optistats.ovh/private/counter.js?c=2w39sg3p44zaaf4maypbr7ceblb7fj5j&down=async" async></script>
+        <noscript>
+            <a href="https://www.contadorvisitasgratis.com" title="contador de visitas">
+                <img src="https://counter4.optistats.ovh/private/contadorvisitasgratis.php?c=2w39sg3p44zaaf4maypbr7ceblb7fj5j" border="0" title="contador de visitas" alt="contador de visitas">
+            </a>
+        </noscript>
+    </div>
     <br>
     <div class="contact-container">
         <form action="enviar.php" method="post">
