--- a/ejemplo1.html
+++ b/ejemplo1.html
@@ -1,38 +1,125 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Fieldset con color de fondo</title>
-<style>
-  /* Estilo para el fieldset */
-  fieldset {
-    background-color: #f0f0f0; /* Color de fondo */
-    padding: 20px; /* Espaciado interno */
-    border: none; /* Quitamos el borde predeterminado */
-    border-radius: 10px; /* Añadimos bordes redondeados */
-  }
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>FRAGANCIA T</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://getbootstrap.com/docs/5.3/assets/css/docs.css">
+    <link rel="stylesheet" href="css/style.css"> 
+    <link rel="icon" href="imagenes/logo-mejorado.png">
+    <style>
+        #contador-visitas {
+            width: 100px; /* Ajustar el ancho del contenedor */
+            height: auto; /* Ajustar la altura del contenedor */
+            margin: 0 auto; /* Centrar el contenedor horizontalmente */
+            text-align: center; /* Alinear el contenido al centro */
+        }
 
-  /* Estilo para el texto legend */
-  legend {
-    font-weight: bold; /* Texto en negrita */
-    color: #333; /* Color del texto */
-  }
-</style>
+        #contador-visitas img {
+            width: 100%; /* Ajustar la imagen al ancho del contenedor */
+            height: auto; /* Mantener la proporción de la imagen */
+        }
+    </style>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </head>
-<body bgcolor="pink">
+<body>
+    <header>
+        <nav class="navbar navbar-expand-lg bg-body-tertiary">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="index.html">Inicio</a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse " id="navbarSupportedContent">
+                    <ul class="navbar-nav me-auto mb-xl-3 mb-lg-0">
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Catalogos</a>
+                            <ul class="dropdown-menu">
+                                <li><a class="dropdown-item" href="catalogo_hombre.html">Catalogo de Hombre</a></li>
+                                <li><hr class="dropdown-divider"></li>
+                                <li><a class="dropdown-item" href="catalogo_mujeres.html">Catalogo de Mujer</a></li>
+                                <li><hr class="dropdown-divider"></li>
+                                <li><a class="dropdown-item" href="catalogo_chamacos.html">Catalogo de Niño</a></li>
+                            </ul>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="sobre-nosotros/sobre_nosotros.html">Sobre Nosotros</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="contacto/contactanos.html">Contactanos</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
+    </header>
+    
+    <!-- Contador de Visitas -->
+    <div id="contador-visitas">
+        <div id="sfc2w39sg3p44zaaf4maypbr7ceblb7fj5j"></div>
+        <script type="text/javascript" src="https://counter4.optistats.ovh/private/counter.js?c=2w39sg3p44zaaf4maypbr7ceblb7fj5j&down=async" async></script>
+        <noscript>
+            <a href="https://www.contadorvisitasgratis.com" title="contador de visitas">
+                <img src="https://counter4.optistats.ovh/private/contadorvisitasgratis.php?c=2w39sg3p44zaaf4maypbr7ceblb7fj5j" border="0" title="contador de visitas" alt="contador de visitas">
+            </a>
+        </noscript>
+    </div>
 
-<!-- Aquí creamos el fieldset -->
-<fieldset>
-  <!-- El elemento legend define un título para el fieldset -->
-  <legend>Información personal</legend>
-  <!-- Aquí irían los elementos del formulario -->
-  <label for="nombre">Nombre:</label>
-  <input type="text" id="nombre" name="nombre">
-  <br>
-  <label for="apellido">Apellido:</label>
-  <input type="text" id="apellido" name="apellido">
-</fieldset>
+    <br>
+    <div id="encabezado_catalogo">
+        <hr>
+        <h2>CATALOGOS</h2>
+        <hr>
+    </div>
+    <div class="catalogo h3">
+        <div class="card" style="width: 18rem; margin-right: 10%;">
+            <a href="catalogo_hombre.html"><h3 class="color-c">Catalogo de Hombres</h3><img src="imagenes/hombre.png" alt="archivo no encontrado"></a>
+        </div>
+        <div class="card h3" style="width: 18rem; margin-right: 10%;">
+            <a href="catalogo_mujeres.html"><h3 class="color-c">Catalogo de Mujeres</h3><img src="imagenes/mujer.png" alt="archivo no encontrado"></a>
+        </div>
+        <div class="card h3" style="width: 18rem;">
+            <a href="catalogo_chamacos.html"><h3 class="color-c">Catalogo  de  <br>Niños</h3><img src="imagenes/niño.png" alt="archivo no encontrado"></a>
+        </div>
+    </div>
 
-</body>
-</html>
+
+    <div id="carouselExampleIndicators" class="carousel slide">
+        <div class="carousel-indicators">
+          <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+          <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+          <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+        </div>
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <img src="imagenes/image.png" class="d-block w-100" alt="...">
+          </div>
+          <div class="carousel-item">
+            <img src="..." class="d-block w-100" alt="...">
+          </div>
+          <div class="carousel-item">
+            <img src="..." class="d-block w-100" alt="...">
+          </div>
+        </div>
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Next</span>
+        </button>
+      </div>
+
+
+    <div id="encabezado_catalogo">
+        <hr id="hr">
+        <h2>Productos mas populares</h2>
+        <hr id="hr">
+    </div>
+    <div class="catalogo promos">
+        <div class="card" style="width: 18rem; margin-right: 8%;">
+            <img src="imagenes/locion hombres/losion11.png" class="card-img-top" alt="archivo no encontrado">
+            <div class="card-body">
+                <b>Nombre:</b> AZZARO<br><br><b>Descripcion:</b> Perfume para hombres con agallas<br><br><b>Precio:</b>  $14.
