--- a/sobre-nosotros/sobre_nosotros.html
+++ b/sobre-nosotros/sobre_nosotros.html
@@ -44,7 +44,15 @@
             </div>
         </nav>
     </header>
-
+    <div id="contador-visitas">
+        <div id="sfc2w39sg3p44zaaf4maypbr7ceblb7fj5j"></div>
+        <script type="text/javascript" src="https://counter4.optistats.ovh/private/counter.js?c=2w39sg3p44zaaf4maypbr7ceblb7fj5j&down=async" async></script>
+        <noscript>
+            <a href="https://www.contadorvisitasgratis.com" title="contador de visitas">
+                <img src="https://counter4.optistats.ovh/private/contadorvisitasgratis.php?c=2w39sg3p44zaaf4maypbr7ceblb7fj5j" border="0" title="contador de visitas" alt="contador de visitas">
+            </a>
+        </noscript>
+    </div>
     <section class= "contenido" style="margin-top: 20px;">
         <div class="product">
             <img src="imagenes/historia.jpg" alt="Nosotros">
